--- a/index.html
+++ b/index.html
@@ -2,34 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Ndungu</title>
-    <!--link to css -->
-    <link rel="stylesheet" href="css/styles.css">
-    <!--box icons-->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>portfolio</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    <!--header-->
-    <header>
-        <!--navigation-->
-        <div class="nav container">
-        <!--logo-->
-        <a href="#" class="logo">Mar<span>tin</span></a>
-        <!--login button-->
-        <a href="#"class="login">login</a>
-    </div>
+<body class="main-content">
+    <header class="section sec1 header active">
+        
     </header>
-
-
-
-
-
-
-    <!--link js-->
-    <script src="js/main.js">
-         
-    </script>
+    <main>
+        <section class="section sec2 about"></section>
+        <section class="section sec3 portfolio"></section>
+        <section class="section sec4 blogs"></section>
+        <section class="section sec5 contact"></section>
+    </main>
 </body>
 </html>
