--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
             <i class="fas fa-envelope-open"></i>
         </div>
     </div>
+     <script src="app.js"></script>
 </body>
 </html>
